Commited -->align issue single step4

--- a/src/app/billing/billing-step4/billing-step4.component.scss
+++ b/src/app/billing/billing-step4/billing-step4.component.scss
@@ -69,8 +69,9 @@
 .bgSet2 {
   background-color: #669bff;
   color: white;
-  align-content: center;
   font-size: 14px;
+  padding: 10px 0px;
+  text-align: center;
 }
 .bgBottom {
   background-color: white;
